--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -16,6 +16,8 @@ jobs:
         
       - name: Setup flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
+        with:
+          FLY_API_TOKEN: ${{ secrets.FLY_TOKEN }}
 
       - name: Deploy
         run: |
